# project-template

./: .gitignore  README.md  check_install.py  install_libjpegturbo.sh  install_uv_kernels.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: check_installation.ipynb  hello_you.ipynb
project_template/: example.py
